@@ -462,6 +462,12 @@ table.multipageimage td {
 
 .templatesUsed { margin-top: 1em; }
 
+/* "unblock" link on Special:Ipblocklist */
+p.mw-ipb-unblocklink {
+	font-size: 90%;
+	float: right;
+}
+
 /**
  * Here is some stuff that's ACTUALLY COMMON TO ALL SKINS.
  * When the day comes, it can be moved to a *real* common.css.
